- Fixed bug #32538 (ext/swf/swf.c does not compile with gcc-3.4.x or newer)